cabal-version: 2.4
name:          paddlebal
version:       0.1.0.0
license:       ISC
license-file:  LICENSE
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2022

executable paddlebal
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded
  default-extensions:
    Arrows
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    ViewPatterns

  build-depends:
    , base         ^>=4.14.1.0
    , gloss
    , Yampa
    , yampa-gloss
